test_suite/alan-2022-examples/failing/001150_mutation.alan
source D begin boolean if; relax end
